--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Minimal theme
-logo: /assets/img/logo.png
-description: Minimal is a theme for GitHub Pages.
+title: Ankit Kumar Jain
+logo: assets/img/Ankit - Image.jpg
+description: I am learning machine learning and Artificial intelligence, and have experience in Data.
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-minimal
