--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Minimal theme
-logo: /assets/img/logo.png
+logo: assets/img/3-012A4913 (1) (1).jpg
 description: Minimal is a theme for GitHub Pages.
 show_downloads: true
 google_analytics:
