--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Minimal theme
+title: Michael Adeleke SAIRI Website Summer 2024 
 logo: assets/img/3-012A4913 (1) (1).jpg
-description: Minimal is a theme for GitHub Pages.
+description: Hi! My name is Michael Adeleke and this is my SAIRI Website for Summer 2024.
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-minimal
