Added NHS England on Description

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: <p align="center"> Shahriar Kabir Khan </p>
 logo: "assets/img/logo.png?raw=true"
 
 description: <p align="center">
-  <a href="assets/pdf/CV - Shahriar Kabir Khan.pdf">Resume</a> |
+  #<a href="assets/pdf/CV - Shahriar Kabir Khan.pdf">Resume</a> |
   <a href="https://www.linkedin.com/in/kabiruh19/">LinkedIn</a> |
   <a href="https://twitter.com/shahriarkabir73">Twitter</a> |
   <a href="https://stackoverflow.com/users/9453613/shahriar-kabir-khan">Stack Overflow</a>
@@ -12,8 +12,8 @@ description: <p align="center">
   <p align="justify">
   Hello, I am Shahriar Kabir Khan. My friends call me Kabir. I am a recent MSc AI graduate from Queen Mary University of London. 
   <br><br>
-  I worked as a Data Curator at Health Data Research UK where I also completed my one-year industrial experience as Data Engineer Intern as a part of my MSc degree, 
-  my work was focused on working with large amount health data, data wrangling, visualising, deploying etc.
+  I work as a Digital, Data and Technology Graduate at NHS England.Previously I worked as a Data Curator at Health Data Research UK where I also completed my one-year industrial experience as Data Engineer Intern as a part of my MSc degree, 
+  my work is/was focused on working with large amount health data including crating data pipeliens on Microsoft Azure, debugging and testing, data wrangling, visualising, deploying etc.
   <br><br>
   </p>
 
