--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Michael Adeleke SAIRI Website Summer 2024 
-logo: assets/img/3-012A4913 (1) (1).jpg
-description: Hi! My name is Michael Adeleke and this is my SAIRI Website for Summer 2024.
+title: 
+logo: 
+description: 
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-minimal
