--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,3 +16,6 @@ jobs:
         run: script/bootstrap
       - name: test
         run: script/cibuild
+concurrency:
+  group: "pages"
+  cancel-in-progress: False
