--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,14 @@
 title: <p align="center">Pat BALDOMAR</p>
 logo: /assets/img/Paterno.jpg
 description: 
-  <p align="justify">
+  <p align="center">
   <a href=""><img alt="Static Badge" src="https://img.shields.io/badge/RESUME-8A2BE2"></a> |
   <a href="https://in.linkedin.com/in/patab"><img alt="Static Badge" src="https://img.shields.io/badge/LinkedIn-blue"></a> |
-  <a href="https://github.com/pabaldomar">GitHub</a>
+  <a href="https://github.com/pabaldomar"><img alt="Static Badge" src="https://img.shields.io/badge/GitHub-black"></a>
   <br>
-  This is my Data Science Portfolio.
+  <p align="justify">
+  This is my Data Science Portfolio. Took up Data Science Bootcamps and still honing my Python skill.
+  </p>
   </br>
   </p>
 show_downloads: false
