--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: <p align="center">Pat BALDOMAR</p>
 logo: /assets/img/Paterno.jpg
 description: 
   <p align="center">
-  <a href="assets/img/CV VSL Paterno Baldomar.pdf"><img alt="Static Badge" src="https://img.shields.io/badge/RESUME-8A2BE2"></a> |
+  <a href="/assets/img/CV VSL Paterno Baldomar.pdf"><img alt="Static Badge" src="https://img.shields.io/badge/RESUME-8A2BE2"></a> |
   <a href="https://in.linkedin.com/in/patab"><img alt="Static Badge" src="https://img.shields.io/badge/LinkedIn-blue"></a> |
   <a href="https://github.com/pabaldomar"><img alt="Static Badge" src="https://img.shields.io/badge/GitHub-black"></a>
   <br>
