--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ description:
   <p align="center">
   <a href="/assets/img/CV%20VSL%20Paterno%20Baldomar.pdf"><img alt="Static Badge" src="https://img.shields.io/badge/RESUME-8A2BE2"></a> 
   <a href="https://in.linkedin.com/in/patab"><img alt="Static Badge" src="https://img.shields.io/badge/LinkedIn-blue"></a> 
-  <a href="/another-page.md"><img alt="Static Badge" src="https://img.shields.io/badge/Data%20Science-black"></a>
+  <a href="/another-page.html"><img alt="Static Badge" src="https://img.shields.io/badge/Data%20Science-black"></a>
   </p>
   <br>
   <p align="center">
