--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ description:
   </p>
   <br>
   <p align="center">
-  email: <a href="paterno.baldomar@gmail.com">paterno.baldomar@gmail.com</a> | phone: <a href="+6329563723553">+632-956-372-3553</a>
+  email: <a href="paterno.baldomar@gmail.com">paterno.baldomar@gmail.com</a>#phone: <a href="+6329563723553">+632-956-372-3553</a>
   </p>
   <br>
   <p align="justify">
