--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ description:
   </p>
   <br>
   <p align="center">
-  <i class="fa fa-envelope"</i> paterno.baldomar@gmail.com | <i class="fa fa-phone"></> +632-956-372-3553
+  email paterno.baldomar@gmail.com | phone +632-956-372-3553
   </p>
   <br>
   <p align="justify">
