--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ description:
   </p>
   <br>
   <p align="center">
-  email ~ <a href="mailto:paterno.baldomar@gmail.com">paterno.baldomar@gmail.com</a> | phone ~ +63 956 372 3553
+  email ~ <a href="mailto:paterno.baldomar@gmail.com">paterno.baldomar@gmail.com</a> phone ~ +63 956 372 3553
   </p>
   <br>
   <p align="justify">
