--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ description:
   </p>
   <br>
   <p align="center">
-  email ~ <a href="mailto:paterno.baldomar@gmail.com">paterno.baldomar@gmail.com</a><br>phone ~ +63 956 372 3553
+  <img alt="Static Badge" src="https://img.shields.io/badge/eMail-8A2BE2"> <a href="mailto:paterno.baldomar@gmail.com">paterno.baldomar@gmail.com</a><br><img alt="Static Badge" src="https://img.shields.io/badge/Phone-8A2BE2"> +63 956 372 3553
   </p>
   <br>
   <p align="justify">
