--- a/_config.yml
+++ b/_config.yml
@@ -2,13 +2,17 @@ title: <p align="center">Pat BALDOMAR</p>
 logo: /assets/img/Paterno.jpg
 description: 
   <p align="center">
-  <a href="/assets/img/CV%20VSL%20Paterno%20Baldomar.pdf"><img alt="Static Badge" src="https://img.shields.io/badge/RESUME-8A2BE2"></a> 
-  <a href="https://in.linkedin.com/in/patab"><img alt="Static Badge" src="https://img.shields.io/badge/LinkedIn-blue"></a> 
-  <a href="/another-page.html"><img alt="Static Badge" src="https://img.shields.io/badge/Data%20Science-black"></a>
+  CONTACT INFORMATION
+  <br>
+  email ~ <a href="mailto:paterno.baldomar@gmail.com">paterno.baldomar@gmail.com</a>
+  <br>
+  phone ~ <a href"+639563723553">+639563723553</a>
   </p>
   <br>
   <p align="center">
-  email ~ <a href="mailto:paterno.baldomar@gmail.com">paterno.baldomar@gmail.com</a><br>phone ~ +63 956 372 3553
+  <a href="/assets/img/CV%20VSL%20Paterno%20Baldomar.pdf"><img alt="Static Badge" src="https://img.shields.io/badge/RESUME-8A2BE2"></a> 
+  <a href="https://in.linkedin.com/in/patab"><img alt="Static Badge" src="https://img.shields.io/badge/LinkedIn-blue"></a> 
+  <a href="/another-page.html"><img alt="Static Badge" src="https://img.shields.io/badge/Data%20Science-black"></a>
   </p>
   <br>
   <p align="justify">
