--- a/_config.yml
+++ b/_config.yml
@@ -6,13 +6,10 @@ description:
   <br>
   email ~ <a href="mailto:paterno.baldomar@gmail.com">paterno.baldomar@gmail.com</a>
   <br>
-  phone ~ <a href"+639563723553">+639563723553</a>
-  </p>
+  phone ~ <a href="+639563723553">+63 956 372 3553</a>
   <br>
-  <p align="center">
-  <a href="/assets/img/CV%20VSL%20Paterno%20Baldomar.pdf"><img alt="Static Badge" src="https://img.shields.io/badge/RESUME-8A2BE2"></a> 
-  <a href="https://in.linkedin.com/in/patab"><img alt="Static Badge" src="https://img.shields.io/badge/LinkedIn-blue"></a> 
-  <a href="/another-page.html"><img alt="Static Badge" src="https://img.shields.io/badge/Data%20Science-black"></a>
+  <a href="/another-page.html"><img alt="Static Badge" src="https://img.shields.io/badge/Entry%20Level%20Data%20Analyst-Data%20Science-blue"></a>  
+  <a href="https://in.linkedin.com/in/patab"><img alt="Static Badge" src="https://img.shields.io/badge/BIM%20CAD%20Designer-Linkedin-blue"></a> 
   </p>
   <br>
   <p align="justify">
