--- a/_config.yml
+++ b/_config.yml
@@ -2,18 +2,18 @@ title: <p align="center">Pat BALDOMAR</p>
 logo: /assets/img/Paterno.jpg
 description: 
   <p align="center">
+  <a href="/another-page.html"><img alt="Static Badge" src="https://img.shields.io/badge/Entry%20Level%20Data%20Analyst-Data%20Science-green"></a>  
+  <a href="https://in.linkedin.com/in/patab"><img alt="Static Badge" src="https://img.shields.io/badge/BIM%20CAD%20Designer-LinkedIn-blue"></a>
+  <br>
   CONTACT INFORMATION
   <br>
   email ~ <a href="mailto:paterno.baldomar@gmail.com">paterno.baldomar@gmail.com</a>
   <br>
   phone ~ <a href="+639563723553">+63 956 372 3553</a>
-  <br>
-  <a href="/another-page.html"><img alt="Static Badge" src="https://img.shields.io/badge/Entry%20Level%20Data%20Analyst-Data%20Science-blue"></a>  
-  <a href="https://in.linkedin.com/in/patab"><img alt="Static Badge" src="https://img.shields.io/badge/BIM%20CAD%20Designer-Linkedin-blue"></a> 
   </p>
   <br>
   <p align="justify">
-  Took up Data Science Bootcamps and still honing my Python skill.
+  Self-driven individual, always eager and confident in to learn something new. Independent yet collaborative in exchanging ideas towards a common goal. Creative and innovative with great analytical thinking. Social intellingce.
   </p>
   </br>
 show_downloads: false
