--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ description:
   </p>
   <br>
   <p align="justify">
-  Self-driven individual, always eager and confident in to learn something new. Independent yet collaborative in exchanging ideas towards a common goal. Creative and innovative with great analytical thinking. Social intellingce.
+  Self-driven individual, always confident and eager to learn new thing. Independent yet collaborative in exchanging idea towards a common goal. Ability to connect effectively with other individuals. Creative and innovative with great analytical thinking.
   </p>
   </br>
 show_downloads: false
