--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,8 @@
 title: SuiteCases MoopsyKamala Story
 description:  Moopsy and Kamala Joint Task
 //logo:  InfinityLake.svg
-logo: /assets/img/Moo.jpg
+logo: assets/img/Moo.jpg
+
 theme: jekyll-theme-minimal
 //title: Minimal theme
 //logo: /assets/img/logo.png
