--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: SuiteCases MoopsyKamala Story
-description:  Moopsy and Kamala Joint Task
+description:  
 //logo:  InfinityLake.svg
 logo: assets/img/Moo.jpg
 
